Fixed z-index bug on small devices; Socket debug output added
Former-commit-id: 68f94d4eb31fd122c175a2d70e3d1b5ca5e256bd

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -20,8 +20,12 @@ a {
   color: #4CAF50;
 }
 #requester-container {
-	top:0px;
-	height: 300px;
+	height: 175px;
+	z-index: 1000;
+	transform: translate(0, -50%);
+}
+h1 {
+	font-size: 42pt;
 }
 .gone {
 	width: 0px;
